2009-07-28 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.1 RC 3 released.

2009-07-23 S. Thiell <stephane.thiell@cea.fr>

	* clush.py: fix another command_timeout (-u) issue, now the command_timeout
	value is passed as the timeout value at worker level.

	* Version 1.1 branched.

2009-07-22 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.1 RC 2 released.

	* clush.py: change -u timeout behavior, if set it's now the timeout value
	passed to task.shell() (and not connect_timeout + command_timeout).

	* clush.py: add -o options to pass custom ssh options (#24).

	* Worker/Ssh.py: simple quote escape fix (trac ticket #25).

	* Worker/Popen2.py: simple quote escape fix (trac ticket #25)

	* clush.py: fix options issue when using -f, -u or -t.

2009-07-13 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.1 RC 1 released.

	* Changed license to CeCILL-C (http://www.cecill.info).

	* clush.py (ttyloop): (feature) added '=' special command in
	interactive mode to toggle output format mode (standard/gathered).

	* Engine/Engine.py (register): (bug) register writer fd to even when
	set_writer_eof() has previously been called.

	* Worker/EngineClient.py (_handle_write): (bug) don't close writer
	when some data remains in write buffer, even if self._weof is True.

2009-07-10 S. Thiell <stephane.thiell@cea.fr>

	* clush.py (ttyloop): added a workaround to replace raw_input() which
	is not interruptible in Python 2.3 (issue #706406).

2009-07-09 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py (__contains__): fixed issue that could appear when
	padding was used, eg. "node113" in "node[030,113] didn't work.

2009-07-08 S. Thiell <stephane.thiell@cea.fr>

	* Version 1.1 beta 6 released.

	* clush.py: major improvements (added write support, better
	interactive mode with readline, launch task in separate thread to let
	the main thread blocking tty input, added Enter key press support
	during run, added node groups support (-a and -g) using external