@@ -1,3 +1,7 @@
+2009-07-29 S. Thiell <stephane.thiell@cea.fr>
+
+	* nodeset.py: fixed -i and -X options issue (trac ticket #29).
+
 2009-07-28 S. Thiell <stephane.thiell@cea.fr>
 
 	* Version 1.1 RC 3 released.
